--- a/Win32_utilities/Win32_utilities.vcxproj.filters
+++ b/Win32_utilities/Win32_utilities.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClInclude Include="win32_messagePump.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="win32_fatalError.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="win32_baseWindow.cpp">
