--- a/Evo/Evolution/MonitorConfigurations.cnf
+++ b/Evo/Evolution/MonitorConfigurations.cnf
@@ -99,3 +99,14 @@ MonitorConfiguration  "WindowConfiguration7.cnf"
 0    # secondary monitor
 0   # end of MonitorConfiguration
 
+MonitorConfiguration  "WindowConfiguration8.cnf"
+1   # monitor number
+0 0 2194 1234   # monitor rectangle
+0 0 2194 1194   # work area rectangle
+1    # primary monitor
+2   # monitor number
+3840 1080 6400 2160   # monitor rectangle
+3840 1080 6400 2120   # work area rectangle
+0    # secondary monitor
+0   # end of MonitorConfiguration
+
