--- a/NNet/NNetSimu/NNetSimu.rc
+++ b/NNet/NNetSimu/NNetSimu.rc
@@ -35,7 +35,8 @@ IDC_NNET_SIMU_MAIN MENU
         MENUITEM "&Proceed single step", IDM_FORWARD
         MENUITEM "&Run",                 IDM_RUN
         MENUITEM "&Stop",                IDM_STOP
-	}
+        MENUITEM "&Analyze",             IDM_ANALYZE
+    }
     POPUP "&View"
     {
         POPUP "&Zoom"
