--- a/NNet/NNetModel/NNetModel.vcxproj.filters
+++ b/NNet/NNetModel/NNetModel.vcxproj.filters
@@ -51,9 +51,6 @@
     <ClInclude Include="NNetModelStorage.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="tShapeType.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="tHighlightType.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -64,6 +61,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ShapeId.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ShapeType.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -92,13 +92,13 @@
     <ClCompile Include="NNetModelStorage.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="tShapeType.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="tParameter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Analyzer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ShapeType.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
