--- a/Toolbox/Utilities/Utilities.vcxproj
+++ b/Toolbox/Utilities/Utilities.vcxproj
@@ -40,6 +40,7 @@
     <ClInclude Include="RingBuffer.h" />
     <ClInclude Include="SlowMotionRatio.h" />
     <ClInclude Include="SmoothMove.h" />
+    <ClInclude Include="SmoothMoveFp.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TextBuffer.h" />
@@ -54,6 +55,7 @@
     <ClCompile Include="LogarithmicTrackbar.cpp" />
     <ClCompile Include="SlowMotionRatio.cpp" />
     <ClCompile Include="SmoothMove.cpp" />
+    <ClCompile Include="SmoothMoveFp.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
