--- a/Toolbox/Utilities/Utilities.vcxproj.filters
+++ b/Toolbox/Utilities/Utilities.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClInclude Include="XArray.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SmoothMoveFp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BoolOp.cpp">
@@ -123,6 +126,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="UtilityWrappers.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SmoothMoveFp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
