--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -102,6 +102,7 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <Lib />
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -158,6 +159,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <Lib />
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Analyzer.h" />
@@ -168,6 +170,7 @@
     <ClInclude Include="NNetModel.h" />
     <ClInclude Include="NNetModelStorage.h" />
     <ClInclude Include="NNetParameters.h" />
+    <ClInclude Include="NNetWrapperHelpers.h" />
     <ClInclude Include="Pipeline.h" />
     <ClInclude Include="Segment.h" />
     <ClInclude Include="Shape.h" />
@@ -186,6 +189,7 @@
     <ClCompile Include="Neuron.cpp" />
     <ClCompile Include="NNetModel.cpp" />
     <ClCompile Include="NNetModelStorage.cpp" />
+    <ClCompile Include="NNetWrapperHelpers.cpp" />
     <ClCompile Include="Pipeline.cpp" />
     <ClCompile Include="Shape.cpp" />
     <ClCompile Include="tParameter.cpp" />
