--- a/NNet/NNetSimu/NNetSimu.rc
+++ b/NNet/NNetSimu/NNetSimu.rc
@@ -58,11 +58,16 @@ IDC_NNET_SIMU_MAIN MENU
             MENUITEM "o&n",  IDD_ARROWS_ON
             MENUITEM "o&ff", IDD_ARROWS_OFF
         }
-        POPUP "&Sound"
-        {
-            MENUITEM "o&n",  IDD_SOUND_ON
-            MENUITEM "o&ff", IDD_SOUND_OFF
-        }
+         POPUP "&Sound"
+         {
+             MENUITEM "o&n",  IDD_SOUND_ON
+             MENUITEM "o&ff", IDD_SOUND_OFF
+         }
+         POPUP "Auto&Open"
+         {
+             MENUITEM "o&n",  IDD_AUTO_OPEN_ON
+             MENUITEM "o&ff", IDD_AUTO_OPEN_OFF
+         }
     }
     POPUP "&Help"
     {
@@ -73,17 +78,36 @@ IDC_NNET_SIMU_MAIN MENU
 //
 // Dialog resources
 //
-LANGUAGE LANG_GERMAN, SUBLANG_GERMAN
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 IDD_ABOUTBOX DIALOGEX 0, 0, 170, 74
 STYLE DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_POPUP | WS_SYSMENU
 CAPTION "About NNetSimu"
 FONT 8, "MS Shell Dlg", 0, 0, 1
 {
-    ICON          "", IDC_STATIC, 14, 14, 21, 20, SS_ICON, WS_EX_LEFT
-    LTEXT         VER_PRODUCTNAME_STR,  IDC_STATIC,    42, 14, 114,  8, SS_LEFT | SS_NOPREFIX, WS_EX_LEFT
-	LTEXT         "Compile time",       IDC_STATIC,    42, 26, 114,  8, SS_LEFT,  WS_EX_LEFT
-	LTEXT         "",                   IDD_TIMESTAMP, 42, 38, 114,  8, SS_LEFT,  WS_EX_LEFT
-	DEFPUSHBUTTON "OK",                 IDOK,         113, 53,  50, 14, WS_GROUP, WS_EX_LEFT
+    ICON          "",                  IDC_STATIC,    14, 14,  21, 20, SS_ICON, WS_EX_LEFT
+    LTEXT         VER_PRODUCTNAME_STR, IDC_STATIC,    42, 14, 114,  8, SS_LEFT | SS_NOPREFIX, WS_EX_LEFT
+	LTEXT         "Compile time",      IDC_STATIC,    42, 26, 114,  8, SS_LEFT,  WS_EX_LEFT
+	LTEXT         "",                  IDD_TIMESTAMP, 42, 38, 114,  8, SS_LEFT,  WS_EX_LEFT
+	DEFPUSHBUTTON "OK",                IDOK,         113, 53,  50, 14, WS_GROUP, WS_EX_LEFT
+}
+
+IDD_TRIGGER_SOUND_DLG DIALOGEX 0, 0, 160, 100
+STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Notification when Neuron triggers"
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
+FONT 8, "MS Shell Dlg"
+{
+    CONTROL "Acoustic Signal", -1,                     STATIC, SS_LEFT          | WS_CHILD  | WS_VISIBLE | WS_GROUP,                 26,  9,  90,  9 
+    CONTROL "",                IDC_TRIGGER_SOUND_ON,   BUTTON, BS_AUTOCHECKBOX  | WS_CHILD  | WS_VISIBLE | WS_TABSTOP,               13,  8,  11, 12 
+    CONTROL "&Frequency:",     -1,                     STATIC, SS_LEFT          | WS_CHILD  | WS_VISIBLE | WS_GROUP,                 36, 22,  36, 11 
+    CONTROL "",                IDC_TRIGGER_SOUND_FREQ, EDIT,   ES_NUMBER        | WS_CHILD  | WS_VISIBLE | WS_BORDER  | WS_TABSTOP,  75, 21,  60, 14 
+    CONTROL "Hz",              -1,                     STATIC, SS_LEFT          | WS_CHILD  | WS_VISIBLE | WS_GROUP,                138, 22,  14, 11 
+    CONTROL "&Duration:",      -1,                     STATIC, SS_LEFT          | WS_CHILD  | WS_VISIBLE | WS_GROUP,                 36, 41,  32, 11 
+    CONTROL "",                IDC_TRIGGER_SOUND_MSEC, EDIT,   ES_NUMBER        | WS_CHILD  | WS_VISIBLE | WS_BORDER  | WS_TABSTOP,  75, 40,  60, 14 
+    CONTROL "msec",            -1,                     STATIC, SS_LEFT          | WS_CHILD  | WS_VISIBLE | WS_GROUP,                138, 41,  20, 11 
+    CONTROL "&Test sound",     IDC_TRIGGER_SOUND_TEST, BUTTON, BS_PUSHBUTTON    | BS_CENTER | WS_CHILD   | WS_VISIBLE | WS_TABSTOP,  16, 62, 120, 11 
+    CONTROL "&OK",             IDOK,                   BUTTON, BS_DEFPUSHBUTTON | WS_CHILD  | WS_VISIBLE | WS_TABSTOP,               16, 83,  50, 11 
+    CONTROL "&Cancel",         IDCANCEL,               BUTTON, BS_PUSHBUTTON    | WS_CHILD  | WS_VISIBLE | WS_TABSTOP,               86, 83,  50, 11 
 }
 
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
