--- a/NNet/NNetWindows/NNetSimuWindows.vcxproj.filters
+++ b/NNet/NNetWindows/NNetSimuWindows.vcxproj.filters
@@ -48,9 +48,6 @@
     <ClInclude Include="win32_status.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="win32_baseAppWindow.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="win32_appMenu.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -60,13 +57,10 @@
     <ClInclude Include="NNetReadBuffer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="NNetWrappers.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="NNetWrapperHelpers.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="win32_performanceWindow.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="win32_triggerSoundDlg.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -92,16 +86,10 @@
     <ClCompile Include="win32_status.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="win32_baseAppWindow.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="NNetWrappers.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="NNetWrapperHelpers.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="win32_performanceWindow.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="win32_triggerSoundDlg.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
