--- a/NNet/NNetSimu/NNetSimu.vcxproj
+++ b/NNet/NNetSimu/NNetSimu.vcxproj
@@ -165,10 +165,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="AutoOpen.h" />
+    <ClInclude Include="NNetModelStorage.h" />
     <ClInclude Include="NNetWrappers.h" />
     <ClInclude Include="Preferences.h" />
     <ClInclude Include="SlowMotionDisplay.h" />
     <ClInclude Include="win32_baseAppWindow.h" />
+    <ClInclude Include="win32_crsrWindow.h" />
+    <ClInclude Include="win32_NNetWindow.h" />
+    <ClInclude Include="win32_NNetWorkThread.h" />
+    <ClInclude Include="win32_NNetWorkThreadInterface.h" />
+    <ClInclude Include="win32_parameterDlg.h" />
+    <ClInclude Include="win32_performanceWindow.h" />
     <ClInclude Include="win32_slowMotionControl.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -181,6 +188,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AutoOpen.cpp" />
+    <ClCompile Include="NNetModelStorage.cpp" />
     <ClCompile Include="NNetSimu.cpp" />
     <ClCompile Include="NNetWrappers.cpp" />
     <ClCompile Include="Preferences.cpp" />
@@ -188,9 +196,15 @@
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="TimeDisplay.cpp" />
     <ClCompile Include="win32_baseAppWindow.cpp" />
+    <ClCompile Include="win32_crsrWindow.cpp" />
     <ClCompile Include="win32_NNetAppMenu.cpp" />
     <ClCompile Include="win32_NNetAppWindow.cpp" />
     <ClCompile Include="win32_NNetController.cpp" />
+    <ClCompile Include="win32_NNetWindow.cpp" />
+    <ClCompile Include="win32_NNetWorkThread.cpp" />
+    <ClCompile Include="win32_NNetWorkThreadInterface.cpp" />
+    <ClCompile Include="win32_parameterDlg.cpp" />
+    <ClCompile Include="win32_performanceWindow.cpp" />
     <ClCompile Include="win32_simulationControl.cpp" />
   </ItemGroup>
   <ItemGroup>
