--- a/Toolbox/Utilities/Utilities.vcxproj
+++ b/Toolbox/Utilities/Utilities.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClInclude Include="BoolOp.h" />
     <ClInclude Include="debug.h" />
+    <ClInclude Include="DisplayFunctor.h" />
     <ClInclude Include="EnumArray.h" />
     <ClInclude Include="EventInterface.h" />
     <ClInclude Include="generationNr.h" />
