--- a/NNet/NNetSimu/NNetSimu.rc
+++ b/NNet/NNetSimu/NNetSimu.rc
@@ -35,7 +35,8 @@ IDC_NNET_SIMU_MAIN MENU
         MENUITEM "&Proceed single step", IDM_FORWARD
         MENUITEM "&Run",                 IDM_RUN
         MENUITEM "&Stop",                IDM_STOP
-//        MENUITEM "&Analyze",             IDM_ANALYZE
+        MENUITEM "&Analyze",             IDM_ANALYZE
+        MENUITEM "&Center model",        IDM_CENTER_MODEL
     }
     POPUP "&View"
     {
@@ -49,6 +50,7 @@ IDC_NNET_SIMU_MAIN MENU
             MENUITEM "Show &cursor window",      IDM_CRSR_WINDOW
             MENUITEM "Show &parameter window",   IDM_PARAM_WINDOW
             MENUITEM "Show &performance window", IDM_PERF_WINDOW
+            //MENUITEM "Show &console window",     IDM_CONS_WINDOW
         }
     }
     POPUP "&Options"
@@ -110,6 +112,9 @@ FONT 8, "MS Shell Dlg"
     CONTROL "&Cancel",         IDCANCEL,               BUTTON, BS_PUSHBUTTON    | WS_CHILD  | WS_VISIBLE | WS_TABSTOP,               86, 83,  50, 11 
 }
 
+// Do not remove definition of IDM_PARAM_WINDOW DIALOG although it's empty
+// CreateDialogParam needs resource
+
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 IDM_PARAM_WINDOW DIALOG 0, 0, 200, 150
 STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_POPUP | WS_SYSMENU
@@ -136,8 +141,8 @@ IDC_NNET_SIMU_MAIN ACCELERATORS
 {
     "r",            IDM_RUN,          ASCII
     "s",            IDM_STOP,         ASCII
-    "+",            IDM_ZOOM_IN,      ASCII
-    "-",            IDM_ZOOM_OUT,     ASCII
+    "+",            IDM_PLUS,         ASCII
+    "-",            IDM_MINUS,        ASCII
     "s",            IDM_SAVE_MODEL,   VIRTKEY, CONTROL
 	"c",            IDM_CRSR_WINDOW,  ASCII,   ALT
 	"p",            IDM_PARAM_WINDOW, ASCII,   ALT
