--- a/Toolbox/Utilities/Utilities.vcxproj.filters
+++ b/Toolbox/Utilities/Utilities.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClInclude Include="SmoothMoveFp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DisplayFunctor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BoolOp.cpp">
