--- a/NNet/NNetSimu/NNetSimu.rc
+++ b/NNet/NNetSimu/NNetSimu.rc
@@ -143,8 +143,9 @@ IDC_NNET_SIMU_MAIN ACCELERATORS
     "s",            IDM_STOP,         ASCII
     "+",            IDM_PLUS,         ASCII
     "-",            IDM_MINUS,        ASCII
+    "a",            IDM_SELECT_ALL,   VIRTKEY, CONTROL
     "s",            IDM_SAVE_MODEL,   VIRTKEY, CONTROL
-	"c",            IDM_CRSR_WINDOW,  ASCII,   ALT
+    "c",            IDM_CRSR_WINDOW,  ASCII,   ALT
 	"p",            IDM_PARAM_WINDOW, ASCII,   ALT
 	"?",            IDM_ABOUT,        ASCII,   ALT
 	VK_DELETE,      IDD_REMOVE_SHAPE, VIRTKEY
