--- a/NNet/NNetModel/NNetModel.vcxproj.filters
+++ b/NNet/NNetModel/NNetModel.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="Pipe.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="NNetColors.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NNetModel.cpp">
@@ -105,6 +108,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Pipe.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="NNetColors.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
