--- a/NNet/NNetModel/NNetModel.vcxproj.filters
+++ b/NNet/NNetModel/NNetModel.vcxproj.filters
@@ -113,5 +113,8 @@
     <ClCompile Include="NNetColors.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="NNetParameters.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
