Copy selection implemented. Running, but VS hangs.

--- a/NNet/NNetSimu/NNetSimu.rc
+++ b/NNet/NNetSimu/NNetSimu.rc
@@ -158,7 +158,7 @@ IDC_NNET_SIMU_MAIN ACCELERATORS
     "c",            IDM_CRSR_WINDOW,  ASCII,   ALT
 	"p",            IDM_PARAM_WINDOW, ASCII,   ALT
 	"?",            IDM_ABOUT,        ASCII,   ALT
-	VK_DELETE,      IDD_REMOVE_SHAPE, VIRTKEY
+	VK_DELETE,      IDM_DELETE,       VIRTKEY
 	VK_ESCAPE,      IDM_ESCAPE,       VIRTKEY
 }
 
