--- a/NNet/NNetWindows/NNetSimuWindows.vcxproj
+++ b/NNet/NNetWindows/NNetSimuWindows.vcxproj
@@ -163,7 +163,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="AnimationThread.h" />
-    <ClInclude Include="NNetReadBuffer.h" />
+    <ClInclude Include="ObserverProxy.h" />
     <ClInclude Include="win32_appMenu.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
