--- a/NNet/Models/WindowConfiguration1.cnf
+++ b/NNet/Models/WindowConfiguration1.cnf
@@ -1,12 +1,12 @@
-MoveWindow IDM_PARAM_WINDOW -798 1464 316 283
+MoveWindow IDM_PARAM_WINDOW 3866 1727 316 283
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CONS_WINDOW 25 25 922 517
+MoveWindow IDM_CONS_WINDOW 251 251 922 517
 ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CRSR_WINDOW 0 300 301 201
+MoveWindow IDM_CRSR_WINDOW 3865 1467 301 201
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_APPL_WINDOW 3957 1135 2179 962
-ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW 3965 1186 2163 881
+MoveWindow IDM_APPL_WINDOW 3832 1072 2576 1056
+ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
+MoveWindow IDM_MAIN_WINDOW 3840 1123 2560 975
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW 0 0 301 161
+MoveWindow IDM_PERF_WINDOW 3863 1267 301 161
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
