Intermediate version. On the way to multiple model windows.

--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -6,7 +6,9 @@ MoveWindow IDM_CRSR_WINDOW 3865 1467 301 201
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_APPL_WINDOW 3832 1072 2576 1056
 ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
+MoveWindow IDM_MAIN_WINDOW_2 5498 1363 201 201
+ShowWindow IDM_MAIN_WINDOW_2 SW_SHOWNORMAL
 MoveWindow IDM_MAIN_WINDOW 3840 1123 2560 975
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW 3866 1190 301 251
+MoveWindow IDM_PERF_WINDOW 3868 1156 301 251
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
