--- a/NNet/NNetSimu/NNetSimu.vcxproj
+++ b/NNet/NNetSimu/NNetSimu.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="SlowMotionDisplay.h" />
     <ClInclude Include="win32_baseAppWindow.h" />
     <ClInclude Include="win32_crsrWindow.h" />
+    <ClInclude Include="win32_MiniWindow.h" />
     <ClInclude Include="win32_NNetWindow.h" />
     <ClInclude Include="win32_WorkThread.h" />
     <ClInclude Include="win32_WorkThreadInterface.h" />
@@ -200,6 +201,7 @@
     <ClCompile Include="TimeDisplay.cpp" />
     <ClCompile Include="win32_baseAppWindow.cpp" />
     <ClCompile Include="win32_crsrWindow.cpp" />
+    <ClCompile Include="win32_MiniWindow.cpp" />
     <ClCompile Include="win32_NNetAppMenu.cpp" />
     <ClCompile Include="win32_NNetAppWindow.cpp" />
     <ClCompile Include="win32_NNetController.cpp" />
