Moving shapes runs smoothly. Automatic halt/run of compute thread, no manual stop required.

--- a/NNet/Models/WindowConfiguration1.cnf
+++ b/NNet/Models/WindowConfiguration1.cnf
@@ -7,7 +7,7 @@ ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_APPL_WINDOW 3832 1072 2576 1056
 ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
 MoveWindow IDM_MINI_WINDOW 6073 1139 301 301
-ShowWindow IDM_MINI_WINDOW SW_HIDE
+ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_MAIN_WINDOW 3840 1123 2560 975
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW 3868 1156 301 251
