Bug when missing configuration file fixed

--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,14 +1,14 @@
-MoveWindow IDM_PARAM_WINDOW 3874 1699 316 283
+MoveWindow IDM_PARAM_WINDOW 939 455 316 283
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CONS_WINDOW 251 251 922 517
+MoveWindow IDM_CONS_WINDOW -1846 1373 993 519
 ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CRSR_WINDOW 3868 1447 301 201
+MoveWindow IDM_CRSR_WINDOW 0 300 301 201
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_APPL_WINDOW 3832 1072 2576 1056
-ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
-MoveWindow IDM_MINI_WINDOW 6073 1139 301 301
-ShowWindow IDM_MINI_WINDOW SW_HIDE
-MoveWindow IDM_MAIN_WINDOW 3840 1123 2560 975
+MoveWindow IDM_APPL_WINDOW 52 52 1646 862
+ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_MINI_WINDOW 0 0 301 301
+ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_MAIN_WINDOW 60 103 1630 781
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW 3868 1156 301 251
+MoveWindow IDM_PERF_WINDOW 0 0 301 251
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
